Make sure SD hero displays on mobile

--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -310,7 +310,7 @@ $outline-light: 2px solid #f2f2f2;
 .page-service-design {
   .hero-container {
     display: flex;
-    height: 400px;
+    min-height: 400px;
     max-width: 640px;
     padding-block: initial !important;
 
